# rk3588_rga_freeze

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh  clean.sh  main.cpp
resize/include/: resize_function.h
resize/src/: resize_function.cpp
rga/include/: drmrga.h  im2d_buffer.h  im2d_type.h  im2d_version.h  rga.h
scripts/: opencv_build.sh
